# pyblenderSDIC

./: .buildinfo  .bumpver.toml  Makefile  README.md  api.html  examples.html  genindex.html  index.html  installation.html  installer.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  usage.doctree
.doctrees/api_doc/: blender_experiment.doctree  camera.doctree  create_axisymmetric_mesh.doctree  create_speckle_BW_image.doctree  create_xy_heightmap_mesh.doctree  default_materials.doctree  default_patterns.doctree  intersect_points.doctree  material_bsdf.doctree  spotlight.doctree  trimesh3d.doctree
.doctrees/usage_doc/: SDIC_example.doctree  create_meshes.doctree  installing_pyblenderSDIC.doctree  mirror_example.doctree  (+2 more)
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
api_doc/: blender_experiment.html  camera.html  create_axisymmetric_mesh.html  create_speckle_BW_image.html  create_xy_heightmap_mesh.html  default_materials.html  default_patterns.html  intersect_points.html  material_bsdf.html  spotlight.html  trimesh3d.html
examples/: example.py
pyblenderSDIC/: __init__.py  __main__.py  blender_experiment.py  camera.py  install.py  spotlight.py
tests/: test_camera.py  test_mesh.py  test_pattern.py
usage_doc/: SDIC_example.html  create_meshes.html  installing_pyblenderSDIC.html  mirror_example.html  running_scripts.html  simple_example.html
(+150 files in other folders)
