[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyblenderSDIC"
requires-python = ">= 3.8"
dynamic = ["dependencies", "version"]
description = "Generating Stereo-Digital Image for Correlation using BLENDER"
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.github@proton.me"}
]
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyblenderSDIC", "pyblenderSDIC*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"pyblenderSDIC.resources" = ["*"]

[project.scripts]
pyblenderSDIC = "pyblenderSDIC.__main__:__main__"

[project.gui-scripts]
pyblenderSDIC-gui = "pyblenderSDIC.__main__:__main_gui__"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "pyblenderSDIC.__version__.__version__"}

[project.optional-dependencies]
dev = [
    "sphinx",
    "pydata-sphinx-theme",
    "numpydoc",
    "pytest",
    "pyinstaller",
    "pytest-cov",
    "bumpver",
    "pyinstaller"
]